[gd_scene load_steps=7 format=3 uid="uid://b1wi74hchp4ow"]

[ext_resource type="Texture2D" uid="uid://cafyjksqdovgm" path="res://assets/fakeNewsGame/scamshieldinstr.png" id="1_54p3d"]
[ext_resource type="Script" uid="uid://do82guia30dyb" path="res://scripts/fake_news.gd" id="1_yqx4i"]
[ext_resource type="PackedScene" uid="uid://b06mjatdh2l1u" path="res://scenes/loading_screen_fake_news.tscn" id="2_j04cf"]
[ext_resource type="Script" uid="uid://cp7jhh15gtb7s" path="res://scripts/fake_news_instruction.gd" id="2_yqx4i"]
[ext_resource type="Texture2D" uid="uid://blu4j8om4t2m6" path="res://assets/fakeNewsGame/startgamebutton.png" id="3_j04cf"]
[ext_resource type="PackedScene" uid="uid://bprle5hqqg24j" path="res://scenes/fake_news_gameplay.tscn" id="5_yqx4i"]

[node name="fake_news" type="Node2D"]
script = ExtResource("1_yqx4i")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -552.0
offset_top = -1026.0
offset_right = 589.0
offset_bottom = 1232.0
size_flags_horizontal = 4
color = Color(0.807843, 0.905882, 1, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(10, 3)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="fake_news_gameplay" parent="." instance=ExtResource("5_yqx4i")]
position = Vector2(-536, -400)

[node name="fake_news_instruction" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_54p3d")
script = ExtResource("2_yqx4i")

[node name="StartGameButton" type="TextureButton" parent="fake_news_instruction"]
offset_left = -399.0
offset_top = 253.0
offset_right = 541.0
offset_bottom = 1041.0
scale = Vector2(0.87223, 0.902825)
texture_normal = ExtResource("3_j04cf")

[node name="loading_screen_fake_news" parent="." instance=ExtResource("2_j04cf")]
position = Vector2(-561, -960)
scale = Vector2(1.03797, 1.02589)

[node name="Loading_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="pressed" from="fake_news_instruction/StartGameButton" to="fake_news_instruction" method="_on_start_game_button_pressed"]
[connection signal="timeout" from="Loading_Timer" to="." method="_on_loading_timer_timeout"]
